--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no, viewport-fit=cover">
-    <meta name="description" content="A guide to hacking the Nintendo Wii U.">
+    <meta name="description" content="Get up and running with modifications to Gorilla Tag to enhance your experience.">
     <title>Gorilla Tag Modding Guide</title>
     <link rel="icon" href="docs/assets/img/favicon.ico">
 
