Instructions added + cleanup from Wii U Guide

--- a/index.html
+++ b/index.html
@@ -37,58 +37,8 @@
                 '/'                                           : '/docs/user-guide/introduction.md',
                 '/sidebar.md'                                 : '/docs/sidebar.md',
                 '/introduction'                               : '/docs/user-guide/introduction.md',
-                '/cfw-choice'                                 : '/docs/user-guide/cfw-choice.md',
-                // CBHC
-                '/cbhc/sidebar.md'                            : '/docs/user-guide/cbhc/sidebar.md',
-                '/cbhc/ds-vc-choice'                          : '/docs/user-guide/cbhc/ds-vc-choice.md',
-                '/cbhc/sd-preparation'                        : '/docs/user-guide/cbhc/sd-preparation.md',
-                '/cbhc/browser-exploit'                       : '/docs/user-guide/cbhc/browser-exploit.md',
-                '/cbhc/nand-backup'                           : '/docs/user-guide/cbhc/nand-backup.md',
-                '/cbhc/launching-cfw'                         : '/docs/user-guide/cbhc/launching-cfw.md',
-                '/cbhc/installing-hblc'                       : '/docs/user-guide/cbhc/installing-hblc.md',
-                // Haxchi
-                '/haxchi/sidebar.md'                          : '/docs/user-guide/haxchi/sidebar.md',
-                '/haxchi/ds-vc-choice'                        : '/docs/user-guide/haxchi/ds-vc-choice.md',
-                '/haxchi/sd-preparation'                      : '/docs/user-guide/haxchi/sd-preparation.md',
-                '/haxchi/browser-exploit'                     : '/docs/user-guide/haxchi/browser-exploit.md',
-                '/haxchi/nand-backup'                         : '/docs/user-guide/haxchi/nand-backup.md',
-                '/haxchi/launching-cfw'                       : '/docs/user-guide/haxchi/launching-cfw.md',
-                '/haxchi/installing-hblc'                     : '/docs/user-guide/haxchi/installing-hblc.md',
-                // Mocha
-                '/mocha/sidebar.md'                           : '/docs/user-guide/mocha/sidebar.md',
-                '/mocha/entrypoint-choice'                    : '/docs/user-guide/mocha/entrypoint-choice.md',
-                // Mocha - Online Exploit
-                '/mocha/online-exploit/sidebar.md'            : '/docs/user-guide/mocha/online-exploit/sidebar.md',
-                '/mocha/online-exploit/sd-preparation'        : '/docs/user-guide/mocha/online-exploit/sd-preparation.md',
-                '/mocha/online-exploit/browser-exploit'       : '/docs/user-guide/mocha/online-exploit/browser-exploit.md',
-                '/mocha/online-exploit/nand-backup'           : '/docs/user-guide/mocha/online-exploit/nand-backup.md',
-                '/mocha/online-exploit/launching-cfw'         : '/docs/user-guide/mocha/online-exploit/launching-cfw.md',
-                // Mocha - Indexiine
-                '/mocha/indexiine/sidebar.md'                 : '/docs/user-guide/mocha/indexiine/sidebar.md',
-                '/mocha/indexiine/sd-preparation'             : '/docs/user-guide/mocha/indexiine/sd-preparation.md',
-                '/mocha/indexiine/browser-exploit'            : '/docs/user-guide/mocha/indexiine/browser-exploit.md',
-                '/mocha/indexiine/nand-backup'                : '/docs/user-guide/mocha/indexiine/nand-backup.md',
-                '/mocha/indexiine/browser-modding'            : '/docs/user-guide/mocha/indexiine/browser-modding.md',
-                '/mocha/indexiine/launching-cfw'              : '/docs/user-guide/mocha/indexiine/launching-cfw.md',
-                // vWii
-                '/vwii-modding'                               : '/docs/vwii/vwii-modding.md',
-                '/vwii/sidebar.md'                            : '/docs/user-guide/vwii/sidebar.md',
-                '/vwii/browser-exploit'                       : '/docs/user-guide/vwii/browser-exploit.md',
-                // Troubleshooting
-                '/recover-vwii-ioses-channels'                : '/docs/troubleshooting/recover-vwii-ioses-channels.md',
-                '/common-issues-fixes'                        : '/docs/troubleshooting/common-issues-fixes.md',
-                '/fix-errcode-112-1037'                       : '/docs/troubleshooting/fix-errcode-112-1037.md',
-                // Extras
-                '/block-updates'                              : '/docs/extras/block-updates.md',
-                '/configurable-payload'                       : '/docs/extras/configurable-payload.md',
-                '/dump-games'                                 : '/docs/extras/dump-games.md',
-                '/dump-wii-games'                             : '/docs/extras/dump-wii-games.md',
-                '/unblock-updates'                            : '/docs/extras/unblock-updates.md',
-                '/uninstall-cbhc'                             : '/docs/extras/uninstall-cbhc.md',
-                '/uninstall-indexiine'                        : '/docs/extras/uninstall-indexiine.md',
+                '/pc-guide'                                   : '/docs/user-guide/pc/beginners-guide.md',
                 '/faq'                                        : '/docs/extras/faq.md',
-                '/find-wiiu-ip-address'                       : '/docs/extras/find-wiiu-ip-address.md',
-                '/donations'                                  : '/docs/extras/donations.md',
                 // About
                 '/about'                                      : '/docs/extras/about.md',
                 // Privacy Policy
