Minor fixes + temp donations page

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 '/faq'                                        : '/docs/extras/faq.md',
                 // About
                 '/about'                                      : '/docs/extras/about.md',
+                '/donations'                                  : '/docs/extras/donations.md'
             },
 
             // NAVIGATION
