--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
                 '/sidebar.md'                                 : '/docs/sidebar.md',
                 '/introduction'                               : '/docs/user-guide/introduction.md',
                 '/pc-guide'                                   : '/docs/user-guide/pc/beginners-guide.md',
+                '/quest-guide'                                : '/docs/user-guide/quest/beginners-guide.md',
                 '/faq'                                        : '/docs/extras/faq.md',
+                '/choose-guide'                               : '/docs/user-guide/chooseguide.md',
                 // About
                 '/about'                                      : '/docs/extras/about.md',
                 '/donations'                                  : '/docs/extras/donations.md'
