Add GoatCounter analytics

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <title>Gorilla Tag Modding Guide</title>
     <link rel="icon" href="docs/assets/img/favicon.ico">
 
+    <!-- GoatCounter Analytics-->
+    <script data-goatcounter="https://burrito.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+
     <!-- Stylesheets -->
     <link rel="stylesheet" href="docs/assets/css/dark.css" title="Dark">
     <link rel="stylesheet" href="docs/assets/css/main.css">
@@ -43,7 +47,7 @@
                 '/choose-guide'                               : '/docs/user-guide/chooseguide.md',
                 // About
                 '/about'                                      : '/docs/extras/about.md',
-                '/donations'                                  : '/docs/extras/donations.md'
+                '/tips'                                       : '/docs/extras/tips.md'
             },
 
             // NAVIGATION
