--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no, viewport-fit=cover">
     <meta name="description" content="Get up and running with modifications to Gorilla Tag to enhance your experience.">
+    <!-- OpenGraph Tags -->
+    <meta property="og:title" content="Gorilla Tag Modding Guide">
+    <meta property="og:site_name" content="BurritoSOFTWARE">
+    <meta property="og:url" content="https://gorillatagmodding.burrito.software">
+    <meta property="og:description" content="Get up and running with modifications to Gorilla Tag to enhance your experience.">
+    <meta property="og:image" content="docs/assets/img/logo.png">
     <title>Gorilla Tag Modding Guide</title>
     <link rel="icon" href="docs/assets/img/favicon.ico">
 
