OpenGraph image fix

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:site_name" content="BurritoSOFTWARE">
     <meta property="og:url" content="https://gorillatagmodding.burrito.software">
     <meta property="og:description" content="Get up and running with modifications to Gorilla Tag to enhance your experience.">
-    <meta property="og:image" content="docs/assets/img/logo.png">
+    <meta property="og:image" content="https://gorillatagmodding.burrito.software/docs/assets/img/logo.png">
     <title>Gorilla Tag Modding Guide</title>
     <link rel="icon" href="docs/assets/img/favicon.ico">
 
