--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                 '/introduction'                               : '/docs/user-guide/introduction.md',
                 '/pc-guide'                                   : '/docs/user-guide/pc/beginners-guide.md',
                 '/quest-guide'                                : '/docs/user-guide/quest/beginners-guide.md',
+                '/pc-maploading'                              : '/docs/user-guide/pc/pc-maploading.md',
+                '/quest-maploading'                           : '/docs/user-guide/quest/quest-maploading.md',
                 '/faq'                                        : '/docs/extras/faq.md',
                 '/choose-guide'                               : '/docs/user-guide/chooseguide.md',
                 // About
