Change "Hey there!" notice to <strong>

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     div = document.querySelector('[data-ea-publisher]');
                     if (div) {
                         console.log("[EthicalAds Manager] Adblocker detected: showing alt message :)")
-                        div.innerHTML = '<blockquote class="tip"><b>Hey there!</b> 👋 It seems like you have an adblocker.<br>Now, I\'m all in for adblocking, and I hate ads myself. The guide currently serves <b>EthicalAds</b>, which are ads that do not track you and maintain privacy. (unlike Facebook heh)<br><br>I know practically every big buck site says this, but turning off your adblocker helps support me. I don\'t try to spy on people, I just want to be able to cover the costs of running this guide for you! :D<br>(Alternatively, you can support me on <a href="https://github.com/sponsors/burritosoftware"><b>GitHub Sponsors</b></a> monthly.)';
+                        div.innerHTML = '<blockquote class="tip"><strong>Hey there!</strong> 👋 It seems like you have an adblocker.<br>Now, I\'m all in for adblocking, and I hate ads myself. The guide currently serves <b>EthicalAds</b>, which are ads that do not track you and maintain privacy. (unlike Facebook heh)<br><br>I know practically every big buck site says this, but turning off your adblocker helps support me. I don\'t try to spy on people, I just want to be able to cover the costs of running this guide for you! :D<br>(Alternatively, you can support me on <a href="https://github.com/sponsors/burritosoftware"><b>GitHub Sponsors</b></a> monthly.)';
                     } else {
                         console.log("[EthicalAds Manager] No ad placements found + seems to be adblocked.")
                     }
