Add URL mappings

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                 '/quest-guide'                                : '/docs/user-guide/quest/beginners-guide.md',
                 '/pc-maploading'                              : '/docs/user-guide/pc/pc-maploading.md',
                 '/quest-maploading'                           : '/docs/user-guide/quest/quest-maploading.md',
+                '/pc-updating'                                : '/docs/user-guide/pc/pc-updating.md',
+                '/quest-updating'                             : '/docs/user-guide/quest/quest-updating.md',
                 '/faq'                                        : '/docs/extras/faq.md',
                 '/choose-guide'                               : '/docs/user-guide/chooseguide.md',
                 // About
