Add language mappings

--- a/index.html
+++ b/index.html
@@ -58,6 +58,127 @@
                 '/quest-updating'                             : '/docs/user-guide/quest/quest-updating.md',
                 '/faq'                                        : '/docs/extras/faq.md',
                 '/choose-guide'                               : '/docs/user-guide/chooseguide.md',
+
+                // Chinese Simplified
+                '/zh_CN/'                                      : '/translations/zh_CN/docs/user-guide/introduction.md',
+                '/zh_CN/sidebar.md'                           : '/translations/zh_CN/docs/sidebar.md',
+                '/zh_CN/introduction'                         : '/translations/zh_CN/docs/user-guide/introduction.md',
+                '/zh_CN/pc-guide'                             : '/translations/zh_CN/docs/user-guide/pc/beginners-guide.md',
+                '/zh_CN/quest-guide'                          : '/translations/zh_CN/docs/user-guide/quest/beginners-guide.md',
+                '/zh_CN/pc-maploading'                        : '/translations/zh_CN/docs/user-guide/pc/pc-maploading.md',
+                '/zh_CN/quest-maploading'                     : '/translations/zh_CN/docs/user-guide/quest/quest-maploading.md',
+                '/zh_CN/pc-updating'                          : '/translations/zh_CN/docs/user-guide/pc/pc-updating.md',
+                '/zh_CN/quest-updating'                       : '/translations/zh_CN/docs/user-guide/quest/quest-updating.md',
+                '/zh_CN/choose-guide'                         : '/translations/zh_CN/docs/user-guide/chooseguide.md',
+
+                // Danish
+                '/da_DK/'                                      : '/translations/da_DK/docs/user-guide/introduction.md',
+                '/da_DK/sidebar.md'                           : '/translations/da_DK/docs/sidebar.md',
+                '/da_DK/introduction'                         : '/translations/da_DK/docs/user-guide/introduction.md',
+                '/da_DK/pc-guide'                             : '/translations/da_DK/docs/user-guide/pc/beginners-guide.md',
+                '/da_DK/quest-guide'                          : '/translations/da_DK/docs/user-guide/quest/beginners-guide.md',
+                '/da_DK/pc-maploading'                        : '/translations/da_DK/docs/user-guide/pc/pc-maploading.md',
+                '/da_DK/quest-maploading'                     : '/translations/da_DK/docs/user-guide/quest/quest-maploading.md',
+                '/da_DK/pc-updating'                          : '/translations/da_DK/docs/user-guide/pc/pc-updating.md',
+                '/da_DK/quest-updating'                       : '/translations/da_DK/docs/user-guide/quest/quest-updating.md',
+                '/da_DK/choose-guide'                         : '/translations/da_DK/docs/user-guide/chooseguide.md',
+
+                // Dutch
+                '/nl_NL/'                                      : '/translations/nl_NL/docs/user-guide/introduction.md',
+                '/nl_NL/sidebar.md'                           : '/translations/nl_NL/docs/sidebar.md',
+                '/nl_NL/introduction'                         : '/translations/nl_NL/docs/user-guide/introduction.md',
+                '/nl_NL/pc-guide'                             : '/translations/nl_NL/docs/user-guide/pc/beginners-guide.md',
+                '/nl_NL/quest-guide'                          : '/translations/nl_NL/docs/user-guide/quest/beginners-guide.md',
+                '/nl_NL/pc-maploading'                        : '/translations/nl_NL/docs/user-guide/pc/pc-maploading.md',
+                '/nl_NL/quest-maploading'                     : '/translations/nl_NL/docs/user-guide/quest/quest-maploading.md',
+                '/nl_NL/pc-updating'                          : '/translations/nl_NL/docs/user-guide/pc/pc-updating.md',
+                '/nl_NL/quest-updating'                       : '/translations/nl_NL/docs/user-guide/quest/quest-updating.md',
+                '/nl_NL/choose-guide'                         : '/translations/nl_NL/docs/user-guide/chooseguide.md',
+
+                // French
+                '/fr_FR/'                                      : '/translations/fr_FR/docs/user-guide/introduction.md',
+                '/fr_FR/sidebar.md'                           : '/translations/fr_FR/docs/sidebar.md',
+                '/fr_FR/introduction'                         : '/translations/fr_FR/docs/user-guide/introduction.md',
+                '/fr_FR/pc-guide'                             : '/translations/fr_FR/docs/user-guide/pc/beginners-guide.md',
+                '/fr_FR/quest-guide'                          : '/translations/fr_FR/docs/user-guide/quest/beginners-guide.md',
+                '/fr_FR/pc-maploading'                        : '/translations/fr_FR/docs/user-guide/pc/pc-maploading.md',
+                '/fr_FR/quest-maploading'                     : '/translations/fr_FR/docs/user-guide/quest/quest-maploading.md',
+                '/fr_FR/pc-updating'                          : '/translations/fr_FR/docs/user-guide/pc/pc-updating.md',
+                '/fr_FR/quest-updating'                       : '/translations/fr_FR/docs/user-guide/quest/quest-updating.md',
+                '/fr_FR/choose-guide'                         : '/translations/fr_FR/docs/user-guide/chooseguide.md',
+
+                // German
+                '/de_DE/'                                      : '/translations/de_DE/docs/user-guide/introduction.md',
+                '/de_DE/sidebar.md'                           : '/translations/de_DE/docs/sidebar.md',
+                '/de_DE/introduction'                         : '/translations/de_DE/docs/user-guide/introduction.md',
+                '/de_DE/pc-guide'                             : '/translations/de_DE/docs/user-guide/pc/beginners-guide.md',
+                '/de_DE/quest-guide'                          : '/translations/de_DE/docs/user-guide/quest/beginners-guide.md',
+                '/de_DE/pc-maploading'                        : '/translations/de_DE/docs/user-guide/pc/pc-maploading.md',
+                '/de_DE/quest-maploading'                     : '/translations/de_DE/docs/user-guide/quest/quest-maploading.md',
+                '/de_DE/pc-updating'                          : '/translations/de_DE/docs/user-guide/pc/pc-updating.md',
+                '/de_DE/quest-updating'                       : '/translations/de_DE/docs/user-guide/quest/quest-updating.md',
+                '/de_DE/choose-guide'                         : '/translations/de_DE/docs/user-guide/chooseguide.md',
+
+                // Japanese
+                '/ja_JP/'                                      : '/translations/ja_JP/docs/user-guide/introduction.md',
+                '/ja_JP/sidebar.md'                           : '/translations/ja_JP/docs/sidebar.md',
+                '/ja_JP/introduction'                         : '/translations/ja_JP/docs/user-guide/introduction.md',
+                '/ja_JP/pc-guide'                             : '/translations/ja_JP/docs/user-guide/pc/beginners-guide.md',
+                '/ja_JP/quest-guide'                          : '/translations/ja_JP/docs/user-guide/quest/beginners-guide.md',
+                '/ja_JP/pc-maploading'                        : '/translations/ja_JP/docs/user-guide/pc/pc-maploading.md',
+                '/ja_JP/quest-maploading'                     : '/translations/ja_JP/docs/user-guide/quest/quest-maploading.md',
+                '/ja_JP/pc-updating'                          : '/translations/ja_JP/docs/user-guide/pc/pc-updating.md',
+                '/ja_JP/quest-updating'                       : '/translations/ja_JP/docs/user-guide/quest/quest-updating.md',
+                '/ja_JP/choose-guide'                         : '/translations/ja_JP/docs/user-guide/chooseguide.md',
+
+                // Norwegian
+                '/no_NO/'                                      : '/translations/no_NO/docs/user-guide/introduction.md',
+                '/no_NO/sidebar.md'                           : '/translations/no_NO/docs/sidebar.md',
+                '/no_NO/introduction'                         : '/translations/no_NO/docs/user-guide/introduction.md',
+                '/no_NO/pc-guide'                             : '/translations/no_NO/docs/user-guide/pc/beginners-guide.md',
+                '/no_NO/quest-guide'                          : '/translations/no_NO/docs/user-guide/quest/beginners-guide.md',
+                '/no_NO/pc-maploading'                        : '/translations/no_NO/docs/user-guide/pc/pc-maploading.md',
+                '/no_NO/quest-maploading'                     : '/translations/no_NO/docs/user-guide/quest/quest-maploading.md',
+                '/no_NO/pc-updating'                          : '/translations/no_NO/docs/user-guide/pc/pc-updating.md',
+                '/no_NO/quest-updating'                       : '/translations/no_NO/docs/user-guide/quest/quest-updating.md',
+                '/no_NO/choose-guide'                         : '/translations/no_NO/docs/user-guide/chooseguide.md',
+
+                // Pirate English
+                '/en_PT/'                                      : '/translations/en_PT/docs/user-guide/introduction.md',
+                '/en_PT/sidebar.md'                           : '/translations/en_PT/docs/sidebar.md',
+                '/en_PT/introduction'                         : '/translations/en_PT/docs/user-guide/introduction.md',
+                '/en_PT/pc-guide'                             : '/translations/en_PT/docs/user-guide/pc/beginners-guide.md',
+                '/en_PT/quest-guide'                          : '/translations/en_PT/docs/user-guide/quest/beginners-guide.md',
+                '/en_PT/pc-maploading'                        : '/translations/en_PT/docs/user-guide/pc/pc-maploading.md',
+                '/en_PT/quest-maploading'                     : '/translations/en_PT/docs/user-guide/quest/quest-maploading.md',
+                '/en_PT/pc-updating'                          : '/translations/en_PT/docs/user-guide/pc/pc-updating.md',
+                '/en_PT/quest-updating'                       : '/translations/en_PT/docs/user-guide/quest/quest-updating.md',
+                '/en_PT/choose-guide'                         : '/translations/en_PT/docs/user-guide/chooseguide.md',
+
+                // Spanish
+                '/es_ES/'                                      : '/translations/es_ES/docs/user-guide/introduction.md',
+                '/es_ES/sidebar.md'                           : '/translations/es_ES/docs/sidebar.md',
+                '/es_ES/introduction'                         : '/translations/es_ES/docs/user-guide/introduction.md',
+                '/es_ES/pc-guide'                             : '/translations/es_ES/docs/user-guide/pc/beginners-guide.md',
+                '/es_ES/quest-guide'                          : '/translations/es_ES/docs/user-guide/quest/beginners-guide.md',
+                '/es_ES/pc-maploading'                        : '/translations/es_ES/docs/user-guide/pc/pc-maploading.md',
+                '/es_ES/quest-maploading'                     : '/translations/es_ES/docs/user-guide/quest/quest-maploading.md',
+                '/es_ES/pc-updating'                          : '/translations/es_ES/docs/user-guide/pc/pc-updating.md',
+                '/es_ES/quest-updating'                       : '/translations/es_ES/docs/user-guide/quest/quest-updating.md',
+                '/es_ES/choose-guide'                         : '/translations/es_ES/docs/user-guide/chooseguide.md',
+
+                // Swedish
+                '/sv_SE/'                                      : '/translations/sv_SE/docs/user-guide/introduction.md',
+                '/sv_SE/sidebar.md'                           : '/translations/sv_SE/docs/sidebar.md',
+                '/sv_SE/introduction'                         : '/translations/sv_SE/docs/user-guide/introduction.md',
+                '/sv_SE/pc-guide'                             : '/translations/sv_SE/docs/user-guide/pc/beginners-guide.md',
+                '/sv_SE/quest-guide'                          : '/translations/sv_SE/docs/user-guide/quest/beginners-guide.md',
+                '/sv_SE/pc-maploading'                        : '/translations/sv_SE/docs/user-guide/pc/pc-maploading.md',
+                '/sv_SE/quest-maploading'                     : '/translations/sv_SE/docs/user-guide/quest/quest-maploading.md',
+                '/sv_SE/pc-updating'                          : '/translations/sv_SE/docs/user-guide/pc/pc-updating.md',
+                '/sv_SE/quest-updating'                       : '/translations/sv_SE/docs/user-guide/quest/quest-updating.md',
+                '/sv_SE/choose-guide'                         : '/translations/sv_SE/docs/user-guide/chooseguide.md',
+
                 // About
                 '/about'                                      : '/docs/extras/about.md',
                 '/tips'                                       : '/docs/extras/tips.md'
