Add Polish mappings

--- a/index.html
+++ b/index.html
@@ -155,6 +155,18 @@
                 '/en_PT/quest-updating'                       : '/translations/en_PT/docs/user-guide/quest/quest-updating.md',
                 '/en_PT/choose-guide'                         : '/translations/en_PT/docs/user-guide/chooseguide.md',
 
+                // Polish
+                '/pl_PL/'                                      : '/translations/pl_PL/docs/user-guide/introduction.md',
+                '/pl_PL/sidebar.md'                           : '/translations/pl_PL/docs/sidebar.md',
+                '/pl_PL/introduction'                         : '/translations/pl_PL/docs/user-guide/introduction.md',
+                '/pl_PL/pc-guide'                             : '/translations/pl_PL/docs/user-guide/pc/beginners-guide.md',
+                '/pl_PL/quest-guide'                          : '/translations/pl_PL/docs/user-guide/quest/beginners-guide.md',
+                '/pl_PL/pc-maploading'                        : '/translations/pl_PL/docs/user-guide/pc/pc-maploading.md',
+                '/pl_PL/quest-maploading'                     : '/translations/pl_PL/docs/user-guide/quest/quest-maploading.md',
+                '/pl_PL/pc-updating'                          : '/translations/pl_PL/docs/user-guide/pc/pc-updating.md',
+                '/pl_PL/quest-updating'                       : '/translations/pl_PL/docs/user-guide/quest/quest-updating.md',
+                '/pl_PL/choose-guide'                         : '/translations/pl_PL/docs/user-guide/chooseguide.md',
+
                 // Spanish
                 '/es_ES/'                                      : '/translations/es_ES/docs/user-guide/introduction.md',
                 '/es_ES/sidebar.md'                           : '/translations/es_ES/docs/sidebar.md',
