Google AdSense connection (commented out ethads)

--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
     <link rel="stylesheet alternate" href="docs/assets/css/light.css" title="Light">
 
     <!-- EthicalAds -->
-    <script async src="https://media.ethicalads.io/media/client/ethicalads.min.js"></script>
+    <!-- <script async src="https://media.ethicalads.io/media/client/ethicalads.min.js"></script> -->
+
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1545654854838298"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -232,7 +236,7 @@
     <script src="https://cdn.jsdelivr.net/npm/docsify@4/lib/plugins/search.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/docsify@4/lib/plugins/zoom-image.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1/components/prism-bash.min.js"></script>
-    <script>
+    <!-- <script>
         window.changeAdStyle=function(){
             // Huuuuge block of code to change ad style to the right style, hope this could get smaller in the future
             var sessionStorageKey = 'activeStylesheetHref';
@@ -293,6 +297,6 @@
         });
     }
     $docsify.plugins = [].concat(loadAds, $docsify.plugins);
-    </script>
+    </script> -->
 </body>
 </html>
