Oh yeah forgot to uncomment this part

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
     }
     $docsify.plugins = [].concat(loadAds, $docsify.plugins);
     </script> -->
-    <!-- <script>
+    <script>
         function loadAds(hook, vm) {
         hook.doneEach(function() {
             $(document).ready(() => {
@@ -309,6 +309,6 @@
         });
     }
     $docsify.plugins = [].concat(loadAds, $docsify.plugins);
-    </script> -->
+    </script>
 </body>
 </html>
