Add song, mod installation pages

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             alias       : {
                 // Original - English
                 '/'                                           : '/docs/user-guide/introduction.md',
+                '/installing-mods'                            : '/docs/user-guide/installation/installing-mods.md',
+                '/installing-songs'                           : '/docs/user-guide/installation/installing-songs.md',
                 '/sidebar.md'                                 : '/docs/sidebar.md',
                 '/introduction'                               : '/docs/user-guide/introduction.md',
                 '/pc-guide'                                   : '/docs/user-guide/pc/beginners-guide.md',
